--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Again</title>
 </head>
 <body>
+  <!-- Header section start -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
@@ -44,6 +45,8 @@
           </div>
         </nav>
     </header>
+    <!-- Header section ends here -->
+    <!-- Banner section start here -->
     <section class="banner-section">
       <div class="overflow">
         <div class="container">
@@ -57,7 +60,33 @@
         </div>
       </div>
     </section>
-    
+    <!-- Banner section ends here -->
+    <!-- Creative Agency section start here -->
+    <section class="creative-agency">
+      <div class="container pt-3">
+        <h1 class="h6 text-center mt-5 mb-3 text-danger">About Us</h1>
+        <h2 class="h2 text-uppercase text-bold text-center mb-5">Creative Agency</h2>
+        <div class="row">
+          <div class="col-4">
+            <a href="#">
+              <img src="images/card1.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-4">
+            <a href="#">
+              <img src="images/card2.jpg" alt="">
+            </a>
+          </div>
+          <div class="col-4">
+            <a href="#">
+              <img src="images/card3.jpg" alt="">
+            </a>
+          </div>
+        </div>
+        <p class="p-5 text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nulla ab placeat corrupti debitis facere architecto excepturi cupiditate cumque. Dolorum!</p>
+      </div>
+    </section> 
+    <!-- Creative Agency section ends here -->
 
     <script src="js/bootstrap.min.js"></script>
 </body>
