--- a/index.html
+++ b/index.html
@@ -101,26 +101,16 @@
           <label for="ssc"><input type="radio" name="edu" id="ssc">SSC</label><br>
           <label for="hsc"><input type="radio" name="edu" id="hsc">HSC</label><br>
         <button class="btn btn-danger mt-2" type="submit">Sumbit</button>
-      </fieldset>>
+      </fieldset>
     </form>
-    <!-- Form ends here -->
-    
-    <!-- Form Start here -->
-    <form action="">
-      <fieldset class="container">
-          <legend>Personal Information</legend>
-          <p>First Name<br><input placeholder="First Name" type="text"  name="" id=""></p>
-          <p>Last Name<br><input placeholder="Last Name" type="text" name="" id=""></p>
-          <p>Phone Number<br><input placeholder="Telephone" type="tel"></p> 
-          <p>Email<br><input type="email" placeholder="Email" required name="" id=""></p>
-          <legend>Options</legend>
-          <p>Education</p>
-          <label for="jsc"><input type="radio" name="edu" id="jsc">JSC</label><br>
-          <label for="ssc"><input type="radio" name="edu" id="ssc">SSC</label><br>
-          <label for="hsc"><input type="radio" name="edu" id="hsc">HSC</label><br>
-        <button class="btn btn-danger mt-2" type="submit">Sumbit</button>
-      </fieldset>>
-    </form>
+    <section class="container column-grid mt-5 mb-5">
+      <div class="column column-1 bg-primary">1</div>
+      <div class="column column-2 bg-danger">2</div>
+      <div class="column column-3 bg-warning">3</div>
+      <div class="column column-4 bg-info">4</div>
+      <div class="column column-5 bg-success">5</div>
+      <div class="column column-6 bg-secondary">6</div>
+    </section>
     <!-- Form ends here -->
 
     <script src="js/bootstrap.min.js"></script>
