--- a/index.html
+++ b/index.html
@@ -11,99 +11,18 @@
     <title>Again</title>
 </head>
 <body>
-  <!-- Header section start -->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container">
-              <div class="col">
-                <a class="navbar-brand" href="#">Shamim</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-              </div>
-              <div class="col">
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </nav>
-    </header>
-    <!-- Header section ends here -->
-    <!-- Banner section start here -->
-    <section class="banner-section">
-      <div class="overflow">
-        <div class="container">
-          <div class="row">
-              <div class="banner-content">
-                <h1>Start now <br> with our template</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eaque!</p>
-                <button class="btn btn-danger">Click Here</button>
-              </div>
-          </div>
-        </div>
-      </div>
+
+  <main class="main surjodoy">
+    <section class="prokiti">
+      <div class=" g-items surjo"></div>
+      <div class=" g-items wave-1"></div>
+      <div class=" g-items wave-2"></div>
+      <div class=" g-items wave-3"></div>
+      <div class=" g-items wave-4"></div>
+      <div class=" g-items pahar"></div>
     </section>
-    <!-- Banner section ends here -->
-    <!-- Creative Agency section start here -->
-    <section class="creative-agency">
-      <div class="container pt-3">
-        <h1 class="h6 text-center mt-5 mb-3 text-danger">About Us</h1>
-        <h2 class="h2 text-uppercase text-bold text-center mb-5">Creative Agency</h2>
-        <div class="row">
-          <div class="col-4">
-            <a href="#">
-              <img src="images/card1.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-4">
-            <a href="#">
-              <img src="images/card2.jpg" alt="">
-            </a>
-          </div>
-          <div class="col-4">
-            <a href="#">
-              <img src="images/card3.jpg" alt="">
-            </a>
-          </div>
-        </div>
-        <p class="p-5 text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nulla ab placeat corrupti debitis facere architecto excepturi cupiditate cumque. Dolorum!</p>
-      </div>
-    </section> 
-    <!-- Creative Agency section ends here -->
-    <!-- Form Start here -->
-    <form action="">
-      <fieldset class="container">
-          <legend>Personal Information</legend>
-          <p>First Name<br><input placeholder="First Name" type="text"  name="" id=""></p>
-          <p>Last Name<br><input placeholder="Last Name" type="text" name="" id=""></p>
-          <p>Phone Number<br><input placeholder="Telephone" type="tel"></p> 
-          <p>Email<br><input type="email" placeholder="Email" required name="" id=""></p>
-          <legend>Options</legend>
-          <p>Education</p>
-          <label for="jsc"><input type="radio" name="edu" id="jsc">JSC</label><br>
-          <label for="ssc"><input type="radio" name="edu" id="ssc">SSC</label><br>
-          <label for="hsc"><input type="radio" name="edu" id="hsc">HSC</label><br>
-        <button class="btn btn-danger mt-2" type="submit">Sumbit</button>
-      </fieldset>
-    </form>
-    <!-- Form ends here -->
+  </main>
+
     <section class="container column-grid mt-5 mb-5">
       <div class="column column-1 bg-primary">1</div>
       <div class="column column-2 bg-danger">2</div>
@@ -112,6 +31,15 @@
       <div class="column column-5 bg-success">5</div>
       <div class="column column-6 bg-secondary">6</div>
     </section>
+
+    <section class="container flex-section">
+      <div class="flex-items">1</div>
+      <div class="flex-items">2</div>
+      <div class="flex-items">3</div>
+      <div class="flex-items">4</div>
+      <div class="flex-items">5</div>
+    </section>
+
 
     <script src="js/bootstrap.min.js"></script>
 </body>
