--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <main class="main surjodoy">
     <section class="prokiti">
       <div class=" g-items surjo"></div>
+      <div class=" g-items chad"></div>
       <div class=" g-items wave-1"></div>
       <div class=" g-items wave-2"></div>
       <div class=" g-items wave-3"></div>
@@ -22,24 +23,6 @@
       <div class=" g-items pahar"></div>
     </section>
   </main>
-
-    <section class="container column-grid mt-5 mb-5">
-      <div class="column column-1 bg-primary">1</div>
-      <div class="column column-2 bg-danger">2</div>
-      <div class="column column-3 bg-warning">3</div>
-      <div class="column column-4 bg-info">4</div>
-      <div class="column column-5 bg-success">5</div>
-      <div class="column column-6 bg-secondary">6</div>
-    </section>
-
-    <section class="container flex-section">
-      <div class="flex-items">1</div>
-      <div class="flex-items">2</div>
-      <div class="flex-items">3</div>
-      <div class="flex-items">4</div>
-      <div class="flex-items">5</div>
-    </section>
-
 
     <script src="js/bootstrap.min.js"></script>
 </body>
