--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Again</title>
+    <title>Sunrise</title>
 </head>
 <body>
 
